# mba_usp

./: analysis.ipynb  docker-compose.yaml  main.py  requirements.txt  run_dagster.sh  sender.py  sintetic_data.py  utils.py
api/: Dockerfile  database.py  requirements.txt  service.py
api/static/: index.html  index.js
common/: schema.py
daemon/: rabbitmq_daemon.py
docker/: docker-compose.yaml
init-db/: init.sql
mba_usp_dagster_project/: README.md  pyproject.toml  setup.cfg  setup.py
mba_usp_dagster_project/mba_usp_dagster_project/: assets.py  definitions.py  jobs.py
worker/: Dockerfile  consumer.py  database.py  modelo.joblib  requirements.txt  transf.joblib
