[project]
name = "mba_usp_dagster_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "mba_usp_dagster_project.definitions"
project_name = "mba_usp_dagster_project"

[tool.setuptools.packages.find]
exclude=["mba_usp_dagster_project_tests"]
